force-app/main/default/objects/Skillset__c/Skillset__c.object-meta.xml
<CustomObject>
    <description>Skills to be listed on a Resume</description>
    <label>Skillset</label>
    <nameField>
        <displayFormat>SK-{0000}</displayFormat>
        <label>Skillset Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Skillsets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>