force-app/main/default/objects/Skillset__c/fields/Skills__c.field-meta.xml
<CustomField>
    <fullName>Skills__c</fullName>
    <description>List of Skills</description>
    <inlineHelpText>Enter in the skills for this type</inlineHelpText>
    <label>Skills</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>