force-app/main/default/objects/Skillset__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to user for skill</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Skillsets</relationshipName>
    <type>Lookup</type>
</CustomField>